# masking

./: .gitignore  LICENSE  README.md
pii-masking-backend-main/: .env.example  .gitattributes  .gitignore  .security.baseline  LICENSE  Makefile  README.md  SECURITY.md  catalog-info.yaml  mkdocs.yml  pyproject.toml
pii-masking-backend-main/.githooks/: post-checkout  pre-commit
pii-masking-backend-main/.github/: CODEOWNERS
pii-masking-backend-main/docker/: Dockerfile
pii-masking-backend-main/docs/: index.md  project_walkthrough_and_learning_guide.md
pii-masking-backend-main/src/: catalog-info.yaml  main.py  mkdocs.yml  requirements.txt
pii-masking-backend-main/src/utils/: audio_utils.py  csv_utils.py  docx_utils.py  gemini_utils.py  image_utils.py  pdf_utils.py  ppt_utils.py  text_utils.py  video_utils.py
pii-masking-backend-main/tasks/: check_repo_hygiene.py  mise-install.cmd  mise-install.ps1  mise-install.sh
pii-masking-backend-main/tests/test_example/: test_hello.py
pii-masking-frontend-master/: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  index.html  mise.toml  mkdocs.yml  package.json  ruff.toml  tsconfig.json  vite.config.ts
pii-masking-frontend-master/.github/: pull_request_template.md
pii-masking-frontend-master/docs/: index.md
pii-masking-frontend-master/docs/frontend/: frontend.md
pii-masking-frontend-master/src/: App.tsx  Routes.tsx  config.ts  index.css  main.tsx
pii-masking-frontend-master/src/components/: DefaultRedirect.tsx  Footer.tsx  MultiSelectDropdown.tsx  Navbar.tsx  ProtectedRoute.tsx  TempMain.tsx
pii-masking-frontend-master/src/context/: userContext.tsx  usersDataContext.tsx
pii-masking-frontend-master/src/pages/main/: Page.tsx
pii-masking-frontend-master/src/types/: global.d.ts
pii-masking-frontend-master/src/utils/: deleteAllCookies.ts  getCookie.ts  userSession.ts
pii-masking-frontend-master/tasks/: scan.py
