# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "piimasking-backend" 
version = "0.1.0"
description = "Awesome piimasking-backend is a Python cli/package created for you."
readme = "README.md"
authors = ["devesh.rajwani_ascentt.com"]
license = "MIT" # based on user input
repository = "https://github.com?owner=Ascentt-Business-Systems&repo=pii-masking-backend"
packages = [
    { include = "src" }
]

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# PyPI classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools"
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"python-project" = "src.__main__:app"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

typer = {extras = ["all"], version = "^0.12.5"}
rich = "^13.9.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
black = {version ="^24.10.0", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.13.2"}
mypy = "^1.14.1"
mypy-extensions = ">=1.0.0"
pre-commit = "^3.8.0"
pydocstyle = "^6.3.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pyupgrade = "^3.19.1"
safety = "^3.2.7"
coverage = "^7.6.4"
coverage-badge = "^1.1.1"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"

[tool.black]
# https://github.com/psf/black
# target-version = ["py311"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = "311"
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.11
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.paths]
source = ["src"]
